tests/baselines/reference/assignmentCompatBug2.errors.txt
tests/cases/compiler/assignmentCompatBug2.ts(1,27): error TS2322: Type '{ a: 数字; }' is not assignable to type '{ b: 数字; }'.
  Object literal may only specify known properties, and 'a' does not exist in type '{ b: 数字; }'.
tests/cases/compiler/assignmentCompatBug2.ts(3,8): error TS2322: Type '{ a: 数字; }' is not assignable to type '{ b: 数字; }'.
  Object literal may only specify known properties, and 'a' does not exist in type '{ b: 数字; }'.
tests/cases/compiler/assignmentCompatBug2.ts(5,13): error TS2322: Type '{ b: 数字; a: 数字; }' is not assignable to type '{ b: 数字; }'.
  Object literal may only specify known properties, and 'a' does not exist in type '{ b: 数字; }'.
tests/cases/compiler/assignmentCompatBug2.ts(15,1): error TS2322: Type '{ f: (n: 数字) => 数字; g: (s: 文字) => 数字; }' is not assignable to type '{ f(n: 数字): 数字; g(s: 文字): 数字; m: 数字; n?: 数字; k?(a: 任意): 任意; }'.
  Property 'm' is missing in type '{ f: (n: 数字) => 数字; g: (s: 文字) => 数字; }'.
tests/cases/compiler/assignmentCompatBug2.ts(20,1): error TS2322: Type '{ f: (n: 数字) => 数字; m: 数字; }' is not assignable to type '{ f(n: 数字): 数字; g(s: 文字): 数字; m: 数字; n?: 数字; k?(a: 任意): 任意; }'.
  Property 'g' is missing in type '{ f: (n: 数字) => 数字; m: 数字; }'.
tests/cases/compiler/assignmentCompatBug2.ts(33,1): error TS2322: Type '{ f: (n: 数字) => 数字; g: (s: 文字) => 数字; n: 数字; k: (a: 任意) => 任意; }' is not assignable to type '{ f(n: 数字): 数字; g(s: 文字): 数字; m: 数字; n?: 数字; k?(a: 任意): 任意; }'.
  Property 'm' is missing in type '{ f: (n: 数字) => 数字; g: (s: 文字) => 数字; n: 数字; k: (a: 任意) => 任意; }'.


==== tests/cases/compiler/assignmentCompatBug2.ts (6 errors) ====
    var b2: { b: number;} = { a: 0 }; // error
                              ~~~~
!!! error TS2322: Type '{ a: 数字; }' is not assignable to type '{ b: 数字; }'.
!!! error TS2322:   Object literal may only specify known properties, and 'a' does not exist in type '{ b: 数字; }'.
    
    b2 = { a: 0 }; // error
           ~~~~
!!! error TS2322: Type '{ a: 数字; }' is not assignable to type '{ b: 数字; }'.
!!! error TS2322:   Object literal may only specify known properties, and 'a' does not exist in type '{ b: 数字; }'.
    
    b2 = {b: 0, a: 0 };
                ~~~~
!!! error TS2322: Type '{ b: 数字; a: 数字; }' is not assignable to type '{ b: 数字; }'.
!!! error TS2322:   Object literal may only specify known properties, and 'a' does not exist in type '{ b: 数字; }'.
    
    var b3: { f(n: number): number; g(s: string): number; m: number; n?: number; k?(a: any): any; };
    
    b3 = {
        f: (n) => { return 0; },
        g: (s) => { return 0; },
        m: 0,
    }; // ok
    
    b3 = {
    ~~
!!! error TS2322: Type '{ f: (n: 数字) => 数字; g: (s: 文字) => 数字; }' is not assignable to type '{ f(n: 数字): 数字; g(s: 文字): 数字; m: 数字; n?: 数字; k?(a: 任意): 任意; }'.
!!! error TS2322:   Property 'm' is missing in type '{ f: (n: 数字) => 数字; g: (s: 文字) => 数字; }'.
        f: (n) => { return 0; },
        g: (s) => { return 0; },
    }; // error
    
    b3 = {
    ~~
!!! error TS2322: Type '{ f: (n: 数字) => 数字; m: 数字; }' is not assignable to type '{ f(n: 数字): 数字; g(s: 文字): 数字; m: 数字; n?: 数字; k?(a: 任意): 任意; }'.
!!! error TS2322:   Property 'g' is missing in type '{ f: (n: 数字) => 数字; m: 数字; }'.
        f: (n) => { return 0; },
        m: 0,
    }; // error
    
    b3 = {
        f: (n) => { return 0; },
        g: (s) => { return 0; },
        m: 0,
        n: 0,
        k: (a) =>{ return null; },
    }; // ok
    
    b3 = {
    ~~
!!! error TS2322: Type '{ f: (n: 数字) => 数字; g: (s: 文字) => 数字; n: 数字; k: (a: 任意) => 任意; }' is not assignable to type '{ f(n: 数字): 数字; g(s: 文字): 数字; m: 数字; n?: 数字; k?(a: 任意): 任意; }'.
!!! error TS2322:   Property 'm' is missing in type '{ f: (n: 数字) => 数字; g: (s: 文字) => 数字; n: 数字; k: (a: 任意) => 任意; }'.
        f: (n) => { return 0; },
        g: (s) => { return 0; },
        n: 0,
        k: (a) =>{ return null; },
    }; // error